--- a/botconfig.json
+++ b/botconfig.json
@@ -10,6 +10,5 @@
     "brown": "#70542b",  
     "orange": "#fcb400",
     "purple": "#ba2c92",
-    "prefix": "#",
-    "token": "NjA5NDY0MTg3MTYwMzYzMDM4.XVAUaQ.bZ9T2XkJmMiVIq_dW_uX14kD0kk"
+    "prefix": "#"
 }
